--- a/GRE.WebApi/appsettings.json
+++ b/GRE.WebApi/appsettings.json
@@ -19,6 +19,6 @@
   "ConnectionStrings": {
     //  "Default": "Server=;Database=;User Id=;Password=;TrustServerCertificate=True;"  
 
-    "Default": "Data Source=DESKTOP-I2H2N9P;Initial Catalog=test;Integrated Security=True;TrustServerCertificate=True;"
+    "Default": "Server=ABHAYRAWAT;Database=GRE;User Id=sa;Password=master;Encrypt=True;TrustServerCertificate=True;"
   }
 }
