add update delete newspaper

--- a/GRE.WebApi/appsettings.json
+++ b/GRE.WebApi/appsettings.json
@@ -20,5 +20,8 @@
     //  "Default": "Server=;Database=;User Id=;Password=;TrustServerCertificate=True;"  
 
     "Default": "Server=ABHAYRAWAT;Database=GRE;User Id=sa;Password=master;Encrypt=True;TrustServerCertificate=True;"
+  },
+  "GREDocs": {
+    "NewsletterPath": "/GREDocs/NewsletterPath"
   }
 }
